# code-builders

./: .gitignore  pyproject.toml
website/home/: admin.py  models.py  urls.py  views.py
website/home/static/home/css/: announcement.css  style.css
website/home/static/sign_in/: style.css
website/home/templates/: 404.html
website/home/templates/auth/: reset_complete.html  reset_done.html  reset_link.html  reset_pass.html  set_pass.html
website/home/templates/handler/: error.html
website/home/templates/home/: adminDashboard.html  announcements.html  base.html  contact-template.html  dashboard.html  home.html  policies.html  privacyPolicy.html  profile.html  refundPolicy.html  team_dashboard.html  termsAndConditions.html
website/home/templates/payments/: confirm_order.html  order_summary.html
website/home/templates/sign_in/: sign.html
website/monetary/: views.py
website/monetary/templates/payments/: confirm_order.html  order_summary.html
website/website/: settings.py  urls.py
